# pyImgMover

./: LICENSE  README.md  mover.py  pyproject.toml
